--- a/default.html
+++ b/default.html
@@ -32,7 +32,7 @@
             <a href="#mainContent" class="skip">Skip to Content</a>
 
     <div class="epLogo">
-<a href="{{site.baseurl}}/index.html" title="Evolved Perception LLC">
+<a href="{{site.baseurl}}/home" title="Evolved Perception LLC">
     <img height="90" width="250" alt="Evolved Perception LLC logo" src="{{ site.baseurl }}/images/ep/evolvedPerceptionLogo.svg"/>
 </a>
     </div>
