--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@ layout: default
 	<section aria-labelledby="webHdr">
         <h2 id="webHdr">Website and Graphic Design</h2>
         <p>Creating an accessible brand.</p>
-		<a href="/design" class="linkPadding">Learn More<span class="visually-hidden"> About Website and Graphic Design Services</span></a>
-        <img class="responsiveImg" src="images/ep/homepage/sketch.png" alt="Website Prototype Sketch" />
-	</section>
+		<a href="/design" class="linkPadding">Learn More<span class="visually-hidden"> About Website and Graphic Design Services</span></a>        
+        <img class="lazy responsiveImg" alt="Website Prototype Sketch" data-src="images/ep/homepage/sketch.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+    </section>
 	
     <section aria-labelledby="artHdr">
         <h2 id="artHdr">Artwork and Photography</h2>
         <p>Capturing nature's beauty.</p>
 		<a href="/artwork" class="linkPadding">View <span class="visually-hidden"> Artwork and Photography </span>Gallery</a>
-        <img class="responsiveImg" src="images/ep/homepage/zinniaLg.jpg" alt="Zinnia Photograph" />
+        <img class="lazy responsiveImg" alt="Zinnia Photograph" data-src="images/ep/homepage/zinniaLg.jpg" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
 	</section>
 	
     <section aria-labelledby="vegHdr">
         <h2 id="vegHdr">Fruit and Vegetable Gardening</h2>
 		<a href="/blog" class="linkPadding">Follow Along <span class="visually-hidden"> to Learn More About Fruit and Vegetable Gardening</span></a>
-        <img class="responsiveImg" src="images/ep/homepage/garden2018.jpg" alt="2018 Garden" />
-	</section>
+        <img class="lazy responsiveImg" alt="2018 Garden" data-src="images/ep/homepage/garden2018.jpg" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="></section>
+        
    
     </div>
 </main>
